feat(menu) : develop update menu api
